--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html">James Guo</a>
     </div>
+
     <div class="collapse navbar-collapse" id="myNavbar">
+    <!-- navbar left -->
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html/#">Home</a></li>
+        <li><a class="navbar-brand" href="index.html">James Guo</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#aboutMe">About</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contacts">Contact</a></li>
-        <li><a href="reading.html">Reading</a></li>
+      </ul>
+    <!-- navbar right -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="reading.html">Readings</a></li>
       </ul>
     </div>
   </div>
@@ -53,7 +57,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Github: <a href="github.com/james-guo">James-Guo</a></p>
+  <p>Github: <a href="http://www.github.com/james-guo">James-Guo</a></p>
 </footer>
 
 </body>
