--- a/reading.html
+++ b/reading.html
@@ -18,15 +18,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html">James Guo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html/#">Home</a></li>
-        <li><a href="index.html">About</a></li>
-        <li><a href="index.html">Projects</a></li>
-        <li><a href="index.html">Contact</a></li>
-        <li><a href="reading.html">Reading</a></li>
+        <li><a class="navbar-brand" href="index.html">James Guo</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+    <!-- navbar right -->
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="reading.html">Readings</a></li>
       </ul>
     </div>
   </div>
@@ -36,7 +36,7 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left"> 
-      <center><h1 id="reading">Reading</h1></center>
+      <center><h1 id="reading">Readings</h1></center>
       <h3>Non Fiction</h3>
       <h3>Fiction</h3>
     </div>
