Reverted some design changes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       </div>
       <div id="projects" class="container-fluid">
        <center><h1>Projects</h1></center>
+       <h3>Reaction Game</h3>
+       <h3>Morse Code Trainer</h3>
       </div>
     </div>
     <div class="col-sm-2 sidenav">
